# SDL3D

./: CMakeLists.txt  README.md
src/: glad.c  main myown.cpp  main.cpp  test.cpp
